devops/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs
  labels:
    service: nestjs
spec:
  selector:
    app: nestjs
  type: LoadBalancer
  ports:
    - port: 8000
