devops/kubernetes/nestjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  type: NodePort
  selector:
    app: nestjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
