devops/kubernetes/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    app: react
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: react
